fixed issue with '#' character in driver's file name